fixed homepage height on mobile

--- a/squarespace.css
+++ b/squarespace.css
@@ -1,4 +1,3 @@
-/*work rollout branch*/
  @font-face {
      font-family: 'TheanoDidot-Regular';
      src: url(https://static1.squarespace.com/static/596001f7bf629a7384f21d69/t/5a52361b419202e32436f231/1515337244406/TheanoDidot-Regular.ttf);
@@ -366,14 +365,13 @@ img.sqs-gallery-design-strip-slide {
 
 /*Homepage*/
 @media screen and (orientation: landscape) {  
-    div.sqs-block.gallery-block.sqs-block-gallery:nth-of-type(2) {
+    #collection-5ac681c4aa4a99b176337f89 div.sqs-block.gallery-block.sqs-block-gallery:nth-of-type(2) {
         display: none;
     }
 }
 
-
-div.sqs-block.gallery-block.sqs-block-gallery:nth-of-type(1) div.sqs-gallery.sqs-gallery-design-stacked {
-    height: 69vh !important;
+    #collection-5ac681c4aa4a99b176337f89 div.sqs-block.gallery-block.sqs-block-gallery:nth-of-type(1) div.sqs-gallery.sqs-gallery-design-stacked {
+        height: 69vh !important;
 }
 
 /*div.sqs-block.gallery-block.sqs-block-gallery:nth-of-type(1) div.sqs-gallery.sqs-gallery-design-stacked img {
@@ -382,48 +380,33 @@ div.sqs-block.gallery-block.sqs-block-gallery:nth-of-type(1) div.sqs-gallery.sqs
     
 }*/
 
-@media screen and (min-width: 1024px) {  
-
-
-/* gap below nav to match work pages - was 17px? */
-div.sqs-system-gallery.sqs-gallery-list {
-    padding-top: 0px;
-}
-
-
-/*image container mobile */
-div.slides-controls {
-    height: 69vh !important;
-}
-
-div.slides-controls img {
-    width: auto !important;
-    height: 69vh !important;
-}
-
-}
 
 /* for mobile */
 
 @media screen and (orientation: portrait) {  
-    div.sqs-block.gallery-block.sqs-block-gallery:nth-of-type(1) {
+    #collection-5ac681c4aa4a99b176337f89 div.sqs-block.gallery-block.sqs-block-gallery:nth-of-type(1) {
         display: none;
     }
 }
 
 @media screen and (max-width: 1023px) {  
-    div.sqs-system-gallery.sqs-gallery-list {
-    padding-top: 17px;
+    #collection-5ac681c4aa4a99b176337f89 div.sqs-system-gallery.sqs-gallery-list {
+        padding-top: 17px;
 }
 
-div.sqs-block.gallery-block.sqs-block-gallery:nth-of-type(2) div.slide.content-fill.sqs-gallery-design-stacked-slide {
-    height: 94.5% !important;
+    #collection-5ac681c4aa4a99b176337f89 div.sqs-block.gallery-block.sqs-block-gallery:nth-of-type(2) div.slide.content-fill.sqs-gallery-design-stacked-slide {
+        // height: 92.0% !important;
+        padding-bottom: 0px !important;
 }
 
-div.sqs-block.gallery-block.sqs-block-gallery:nth-of-type(2) div.slide.content-fill.sqs-gallery-design-stacked-slide img {
-    height: 100% !important;
-    width: auto !important;
+    #collection-5ac681c4aa4a99b176337f89 div.sqs-block.gallery-block.sqs-block-gallery:nth-of-type(2) div.slide.content-fill.sqs-gallery-design-stacked-slide img {
+        height: 101% !important;
+        width: auto !important;
     
+}
+
+    div.sqs-block.gallery-block.sqs-block-gallery:nth-of-type(2) div.clear>div {
+        padding-bottom: 0px !important;
 }
 
 }
@@ -433,3 +416,31 @@ first block desktop
 div.sqs-block.gallery-block.sqs-block-gallery:nth-of-type(1)
 */
 
+/*
+@media screen and (min-width: 1024px) {  
+
+// gap below nav to match work pages - was 17px? 
+    #collection-5ac681c4aa4a99b176337f89 div.sqs-system-gallery.sqs-gallery-list {
+        padding-top: 0px;
+}
+
+
+// image container mobile 
+    #collection-5ac681c4aa4a99b176337f89 div.slides-controls {
+        height: 69vh !important;
+}
+
+    #collection-5ac681c4aa4a99b176337f89 div.slides-controls img {
+        width: auto !important;
+        height: 69vh !important;
+}
+
+}
+*/
+
+
+
+/*
+div.sqs-gallery-container.sqs-gallery-block-slideshow.clear:nth-of-type(2)
+div.sqs-block.gallery-block.sqs-block-gallery:nth-of-type(2) 
+  */
